+好作文接口调用

--- a/app/src/main/res/layout/frag_mine.xml
+++ b/app/src/main/res/layout/frag_mine.xml
@@ -44,6 +44,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/tvNickName"
                         style="@style/TitleTextStyle"
                         android:text="张三" />
 
