--- a/app/src/main/res/layout/item_lv_video.xml
+++ b/app/src/main/res/layout/item_lv_video.xml
@@ -21,9 +21,9 @@
             <com.znz.compass.znzlibray.views.imageloder.HttpImageView
                 android:id="@+id/ivImage"
                 android:layout_width="120dp"
-                android:layout_height="100dp"
+                android:layout_height="90dp"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/img3" />
+                android:src="@mipmap/default_image_rect" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -33,16 +33,19 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvName"
                     style="@style/TitleTextStyle"
                     android:text="微课视频名称"
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/tvTeacher"
                     style="@style/TextGrayStyle"
                     android:layout_marginTop="@dimen/distance_text"
                     android:text="老师名字" />
 
                 <TextView
+                    android:id="@+id/tvContent"
                     style="@style/TextStyle"
                     android:layout_marginTop="@dimen/distance_text"
                     android:ellipsize="end"
@@ -50,6 +53,7 @@
                     android:text="我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。..." />
 
                 <TextView
+                    android:id="@+id/tvTime"
                     style="@style/TextGrayStyle"
                     android:layout_marginTop="@dimen/distance_text"
                     android:text="2017/08/12" />
