--- a/app/src/main/res/layout/act_article_detail.xml
+++ b/app/src/main/res/layout/act_article_detail.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:orientation="vertical">
 
     <include layout="@layout/include_common_navigation" />
@@ -11,70 +13,91 @@
 
     <include layout="@layout/include_common_network_status" />
 
-    <LinearLayout
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:padding="@dimen/distance_view">
+        android:layout_height="wrap_content">
 
-        <TextView
-            style="@style/TitleTextStyle"
-            android:text="作文题目：我的理想"
-            android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        <TextView
-            style="@style/TextStyle"
-            android:layout_marginTop="@dimen/distance_divider"
-            android:text="命题老师：叶雨" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:padding="@dimen/distance_view">
 
-        <TextView
-            style="@style/TextGrayStyle"
-            android:layout_marginTop="@dimen/distance_divider"
-            android:text="2017/08/12" />
+                <TextView
+                    android:id="@+id/tvName"
+                    style="@style/TitleTextStyle"
+                    android:text="作文题目：我的理想"
+                    android:textStyle="bold" />
 
-        <TextView
-            style="@style/TextStyle"
-            android:layout_marginTop="@dimen/distance_view"
-            android:text="我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。在一个安静的环境下工作，不是挺好的。我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。在一个安静的环境下工作，不是挺好的。我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。"></TextView>
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/tvTeacher"
+                    style="@style/TextStyle"
+                    android:layout_marginTop="@dimen/distance_divider"
+                    android:text="命题老师：叶雨" />
+
+                <TextView
+                    android:id="@+id/tvTime"
+                    style="@style/TextGrayStyle"
+                    android:layout_marginTop="@dimen/distance_divider"
+                    android:text="2017/08/12" />
+
+                <TextView
+                    android:id="@+id/tvContent"
+                    style="@style/TextStyle"
+                    android:layout_marginTop="@dimen/distance_view"
+                    android:text="我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。在一个安静的环境下工作，不是挺好的。我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。在一个安静的环境下工作，不是挺好的。我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。"></TextView>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rvArticle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="30dp"
+                android:layout_marginTop="30dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <View
+                    style="@style/LineOrange"
+                    android:layout_weight="1" />
+
+                <TextView
+                    style="@style/BtnTagStyle"
+                    android:text="名师点评" />
+
+                <View
+                    style="@style/LineOrange"
+                    android:layout_weight="1" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tvComment"
+                style="@style/TextRedStyle"
+                android:paddingLeft="@dimen/distance_view"
+                android:paddingRight="@dimen/distance_view"
+                android:text="能过合理的想象,反映出意味深长的哲理,…行文流畅,简洁,充分发挥了自己的想像力,是一篇不错的…文章清逸婉丽,流畅连贯,尤其人物语言幽默风趣,再加上一些精妙词语的使用,无形中为文章增添了不少情趣.。" />
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:layout_marginTop="30dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tvSubmit"
+                style="@style/BtnRoundStyle"
+                android:layout_marginBottom="30dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="20dp"
+                android:text="投票（211）"
+                android:visibility="gone" />
 
-        <View
-            style="@style/LineOrange"
-            android:layout_weight="1" />
-
-        <TextView
-            style="@style/BtnTagStyle"
-            android:text="名师点评" />
-
-        <View
-            style="@style/LineOrange"
-            android:layout_weight="1" />
-    </LinearLayout>
-
-    <TextView
-        style="@style/TextRedStyle"
-        android:paddingLeft="@dimen/distance_view"
-        android:paddingRight="@dimen/distance_view"
-        android:text="能过合理的想象,反映出意味深长的哲理,…行文流畅,简洁,充分发挥了自己的想像力,是一篇不错的…文章清逸婉丽,流畅连贯,尤其人物语言幽默风趣,再加上一些精妙词语的使用,无形中为文章增添了不少情趣.。" />
-
-
-    <TextView
-        android:id="@+id/tvSubmit"
-        style="@style/BtnRoundStyle"
-        android:layout_marginBottom="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="20dp"
-        android:text="投票（211）"
-        android:visibility="gone" />
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 </LinearLayout>
