--- a/app/src/main/res/layout/act_article_subject.xml
+++ b/app/src/main/res/layout/act_article_subject.xml
@@ -10,48 +10,62 @@
 
     <include layout="@layout/include_common_network_status" />
 
-    <LinearLayout
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:padding="@dimen/distance_view">
+        android:layout_height="wrap_content">
 
-        <TextView
-            style="@style/TitleTextStyle"
-            android:text="作文题目：我的理想"
-            android:textStyle="bold" />
-
-        <TextView
-            style="@style/TextStyle"
-            android:layout_marginTop="@dimen/distance_divider"
-            android:text="命题老师：叶雨" />
-
-        <TextView
-            style="@style/TextGrayStyle"
-            android:layout_marginTop="@dimen/distance_divider"
-            android:text="2017/08/12" />
-
-        <ImageView
-            android:id="@+id/ivImage"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:layout_marginTop="@dimen/distance_view"
-            android:scaleType="centerCrop"
-            android:src="@mipmap/img2"
-            android:visibility="visible" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        <TextView
-            style="@style/TextStyle"
-            android:layout_marginTop="@dimen/distance_view"
-            android:text="我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。在一个安静的环境下工作，不是挺好的。我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。" />
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:padding="@dimen/distance_view">
+
+                <TextView
+                    android:id="@+id/tvName"
+                    style="@style/TitleTextStyle"
+                    android:text="作文题目：我的理想"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvTeacher"
+                    style="@style/TextStyle"
+                    android:layout_marginTop="@dimen/distance_divider"
+                    android:text="命题老师：叶雨" />
+
+                <TextView
+                    android:id="@+id/tvTime"
+                    style="@style/TextGrayStyle"
+                    android:layout_marginTop="@dimen/distance_divider"
+                    android:text="2017/08/12" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rvArticle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/tvContent"
+                    style="@style/TextStyle"
+                    android:layout_marginTop="@dimen/distance_view"
+                    android:text="我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。在一个安静的环境下工作，不是挺好的。我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。" />
+            </LinearLayout>
 
 
-    <TextView
-        android:id="@+id/tvSubmit"
-        style="@style/BtnRoundStyle"
-        android:layout_marginTop="30dp"
-        android:text="我要挑战" />
+            <TextView
+                android:id="@+id/tvSubmit"
+                style="@style/BtnRoundStyle"
+                android:layout_marginBottom="30dp"
+                android:layout_marginTop="30dp"
+                android:text="我要挑战" />
+
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
+
 
 </LinearLayout>
