--- a/lib_zuowen/src/main/res/layout/widget_pull_to_refresh_no_data.xml
+++ b/lib_zuowen/src/main/res/layout/widget_pull_to_refresh_no_data.xml
@@ -7,8 +7,9 @@
     android:visibility="visible">
 
     <ImageView
-        android:layout_width="110dp"
-        android:layout_height="110dp"
+        android:layout_width="155dp"
+        android:layout_height="120dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="100dp"
         android:background="@drawable/empicon_box" />
 
@@ -19,6 +20,6 @@
         android:layout_marginTop="15dp"
         android:gravity="center"
         android:text="没有相关信息"
-        android:textColor="@color/text_color"
+        android:textColor="@color/text_gray"
         android:textSize="@dimen/text_size" />
 </LinearLayout>
