--- a/app/src/main/res/layout/act_edit_value.xml
+++ b/app/src/main/res/layout/act_edit_value.xml
@@ -18,6 +18,7 @@
         <View style="@style/LineDivider" />
 
         <com.znz.compass.znzlibray.views.EditTextWithDel
+            android:id="@+id/etValue"
             style="@style/EditSingleStyle"
             android:layout_width="match_parent"
             android:background="@color/white"
