--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="home_menu_size">40dp</dimen>
+    <dimen name="home_distance">10dp</dimen>
 </resources>
