--- a/lib_zuowen/src/main/res/values/colors_znz.xml
+++ b/lib_zuowen/src/main/res/values/colors_znz.xml
@@ -8,7 +8,7 @@
 
     <!--基础色值-->
     <color name="red">#E77D7C</color>
-    <color name="orange">#FF8F40</color>
+    <color name="orange">#E8A615</color>
     <color name="blue">#367FFF</color>
     <color name="yellow">#FFF7D23E</color>
     <color name="green">#30BC9D</color>
