--- a/app/src/main/res/layout/item_lv_video.xml
+++ b/app/src/main/res/layout/item_lv_video.xml
@@ -46,11 +46,29 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/tvName"
-                    style="@style/TitleTextStyle"
-                    android:text="微课视频名称"
-                    android:textStyle="bold" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tvStatus"
+                        style="@style/TextWhiteStyle"
+                        android:layout_marginRight="@dimen/distance_divider"
+                        android:background="@drawable/bg_buy_status"
+                        android:paddingBottom="1dp"
+                        android:paddingLeft="6dp"
+                        android:paddingRight="6dp"
+                        android:paddingTop="1dp"
+                        android:text="已购买" />
+
+                    <TextView
+                        android:id="@+id/tvName"
+                        style="@style/TitleTextStyle"
+                        android:text="微课视频名称"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
 
                 <TextView
                     android:id="@+id/tvTeacher"
