--- a/lib_zuowen/src/main/res/drawable/bg_nav_search.xml
+++ b/lib_zuowen/src/main/res/drawable/bg_nav_search.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1px"
-        android:color="#313844" />
-    <solid android:color="#313844" />
-    <corners android:radius="22dp" />
+        android:color="@color/text_gray" />
+    <solid android:color="@color/white" />
+    <corners android:radius="33dp" />
 </shape>
