--- a/lib_zuowen/src/main/res/layout/view_znz_toolbar_search.xml
+++ b/lib_zuowen/src/main/res/layout/view_znz_toolbar_search.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_height"
     android:background="@color/nav_backgroud"
-    android:elevation="8dp">
+    android:elevation="8dp"
+    app:contentInsetLeft="0dp"
+    app:contentInsetStart="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,9 +16,39 @@
         android:orientation="horizontal">
 
         <LinearLayout
+            android:id="@+id/llSearchRight"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:minWidth="60dp"
+            android:orientation="vertical"
+            android:visibility="visible">
+
+            <ImageView
+                android:id="@+id/ivSearchRight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/topback" />
+
+            <TextView
+                android:id="@+id/tvNavRight"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:minWidth="60dp"
+                android:text="取消"
+                android:textColor="@color/white"
+                android:textSize="@dimen/title_size"
+                android:visibility="gone" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/llSearch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
             android:layout_weight="1"
             android:orientation="horizontal">
 
@@ -40,16 +72,17 @@
                 android:id="@+id/etSerach"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="1dp"
                 android:background="@drawable/bg_nav_search"
+                android:drawableLeft="@mipmap/icon_sousuo"
+                android:drawablePadding="6dp"
                 android:gravity="center_vertical"
                 android:hint="请输入关键词"
                 android:minHeight="30dp"
-                android:paddingLeft="16dp"
+                android:paddingLeft="10dp"
                 android:paddingRight="16dp"
                 android:singleLine="true"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white"
+                android:textColor="@color/text_gray"
+                android:textColorHint="@color/text_gray"
                 android:textSize="@dimen/text_size"
                 android:visibility="visible"
                 app:edit_delete_icon="@drawable/textclose" />
@@ -67,34 +100,6 @@
                 android:id="@+id/ivSearchRight2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llSearchRight"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:minWidth="60dp"
-            android:orientation="vertical"
-            android:visibility="visible">
-
-            <ImageView
-                android:id="@+id/ivSearchRight"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/tvNavRight"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:minWidth="60dp"
-                android:text="取消"
-                android:textColor="@color/white"
-                android:textSize="@dimen/title_size"
-                android:visibility="visible" />
-
         </LinearLayout>
     </LinearLayout>
 
