--- a/app/src/main/res/layout/act_verify_phone.xml
+++ b/app/src/main/res/layout/act_verify_phone.xml
@@ -34,6 +34,7 @@
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
             android:layout_marginTop="20dp"
+            android:background="@drawable/bg_btn_round_gray"
             android:text="下一步"
             android:textColor="@color/white" />
     </LinearLayout>
