--- a/app/src/main/res/layout/popup_verify_code.xml
+++ b/app/src/main/res/layout/popup_verify_code.xml
@@ -34,7 +34,7 @@
                 android:gravity="center"
                 android:hint="验证码" />
 
-            <com.znz.compass.znzlibray.views.imageloder.HttpImageView
+            <ImageView
                 android:id="@+id/ivImage"
                 android:layout_width="100dp"
                 android:layout_height="40dp"
