--- a/lib_zuowen/src/main/res/layout/item_gv_upload_image.xml
+++ b/lib_zuowen/src/main/res/layout/item_gv_upload_image.xml
@@ -1,30 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical">
 
     <FrameLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <com.znz.compass.znzlibray.views.imageloder.HttpImageView
             android:id="@+id/ivImage"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_margin="@dimen/distance_divider"
-            android:scaleType="centerCrop"
-            android:src="@mipmap/add_image" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/distance_view"
+            android:layout_marginLeft="@dimen/distance_view"
+            android:layout_marginRight="@dimen/distance_view"
+            android:src="@mipmap/tianjiazhaopian" />
 
         <ImageView
             android:id="@+id/ivDelete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:layout_marginTop="5dp"
             android:src="@mipmap/delll" />
     </FrameLayout>
-
 
 </LinearLayout>
