+好作文接口调用

--- a/app/src/main/res/layout/act_complete_info.xml
+++ b/app/src/main/res/layout/act_complete_info.xml
@@ -31,7 +31,7 @@
             android:id="@+id/etRecommendUser"
             style="@style/EditRoundStyle"
             android:layout_marginTop="20dp"
-            android:hint="推荐人" />
+            android:hint="推荐人(选填）" />
 
         <com.znz.compass.znzlibray.views.EditTextWithDel
             style="@style/EditRoundStyle"
