--- a/app/src/main/res/layout/act_login.xml
+++ b/app/src/main/res/layout/act_login.xml
@@ -19,11 +19,10 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <View style="@style/WeightView" />
-
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="80dp"
             android:src="@mipmap/logo_login" />
 
         <TextView
