--- a/app/src/main/res/layout/item_lv_week.xml
+++ b/app/src/main/res/layout/item_lv_week.xml
@@ -68,6 +68,11 @@
                 android:scaleType="centerCrop"
                 android:src="@mipmap/default_image_rect"
                 android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/tvTime"
+                style="@style/TimeTextStyle"
+                android:layout_marginTop="@dimen/distance_divider" />
         </LinearLayout>
 
     </LinearLayout>
