--- a/lib_zuowen/src/main/res/layout/view_znz_toolbar_search.xml
+++ b/lib_zuowen/src/main/res/layout/view_znz_toolbar_search.xml
@@ -81,7 +81,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="16dp"
                 android:singleLine="true"
-                android:textColor="@color/text_gray"
+                android:textColor="@color/text_color"
                 android:textColorHint="@color/text_gray"
                 android:textSize="@dimen/text_size"
                 android:visibility="visible" />
