--- a/app/src/main/res/layout/item_lv_class.xml
+++ b/app/src/main/res/layout/item_lv_class.xml
@@ -39,8 +39,8 @@
 
             <CheckBox
                 android:id="@+id/cbClass"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:background="@drawable/bg_cb_select"
                 android:button="@null"
                 android:enabled="false" />
