--- a/app/src/main/res/drawable/bg_cb_select.xml
+++ b/app/src/main/res/drawable/bg_cb_select.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@mipmap/cartlistchochit" android:state_checked="true" />
-    <item android:drawable="@mipmap/cartlistchoc" android:state_checked="false" />
+    <item android:drawable="@mipmap/icon_chenggong" android:state_checked="true" />
+    <item android:drawable="@mipmap/icon_weixuan" android:state_checked="false" />
 </selector>
