--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -63,7 +63,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@null</item>
         <item name="android:button">@null</item>
-        <item name="android:drawablePadding">@dimen/distance_divider</item>
+        <item name="android:drawablePadding">16dp</item>
         <item name="android:drawableRight">@drawable/bg_cb_select</item>
         <item name="android:padding">@dimen/distance_view</item>
         <item name="android:textSize">@dimen/title_size</item>
