--- a/app/src/main/res/layout/act_edit_value.xml
+++ b/app/src/main/res/layout/act_edit_value.xml
@@ -23,6 +23,7 @@
             android:layout_width="match_parent"
             android:background="@color/white"
             android:hint="请输入用户名"
+            android:maxLength="20"
             android:padding="@dimen/distance_view"
             android:textSize="@dimen/title_size" />
 
@@ -34,6 +35,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:layout_marginTop="20dp"
+            android:background="@drawable/bg_btn_round_gray"
             android:text="提交" />
     </LinearLayout>
 
