--- a/app/src/main/res/layout/act_article_upload_again.xml
+++ b/app/src/main/res/layout/act_article_upload_again.xml
@@ -30,7 +30,7 @@
                     android:id="@+id/uploadImage"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/distance_view" />
+                    android:layout_margin="@dimen/distance_view" />
 
                 <LinearLayout
                     android:id="@+id/llAdd"
