--- a/lib_zuowen/src/main/res/layout/item_gv_upload_image.xml
+++ b/lib_zuowen/src/main/res/layout/item_gv_upload_image.xml
@@ -13,9 +13,7 @@
             android:id="@+id/ivImage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/distance_view"
-            android:layout_marginLeft="@dimen/distance_view"
-            android:layout_marginRight="@dimen/distance_view"
+            android:scaleType="centerCrop"
             android:src="@mipmap/tianjiazhaopian" />
 
         <ImageView
